terraform/main.tf
terraform {
  required_version = ">= 1.5.0"
  required_providers {
    aws = {
        source = "hashicorp/aws"
        version = "~> 6.0"
    }
  }
}

provider "aws"{
    region = "eu-central-1"
}

data "aws_ssm_parameter" "ubuntu_ami"{
    name = "/aws/service/canonical/ubuntu/server/24.04/stable/current/amd64/hvm/ebs-gp3/ami-id"
}

resource "aws_security_group" "fastapi_sg" {
    name = "fastapi-calculator-sg"
    description = "Allow SSH and HTTP"

    ingress {
        description = "SSH from my IP"
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = [var.my_ip_cidr]
    }

    ingress {
        description = "HTTP from internet"
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        description = "Allow all outbound"
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"] 
    }
    tags = {
      Name = "fastapi-calculator-sg"
    }
}

resource "aws_instance" "fastapi" {
    ami = data.aws_ssm_parameter.ubuntu_ami.value
    instance_type = "t3.micro"
    key_name = var.key_name
    vpc_security_group_ids = [ aws_security_group.fastapi_sg.id ]

    user_data = templatefile("${path.module}/user_data.sh",{
        repo_url = var.repo_url
    })

    tags = {
      Name = "fastapi-calculator"
    }
}
